@@ -131,6 +131,8 @@
 		
 		<script type="text/javascript" src="js/loc/burrows.js"></script>
 		
+		<script type="text/javascript" src="js/event/dreams.js"></script>
+		
 		<!-- Characters -->
 		<script type="text/javascript" src="js/event/fera.js"></script>
 		<script type="text/javascript" src="js/event/miranda.js"></script>
