@@ -10,6 +10,7 @@ Version 0.3f3
 * Fixed minor bug in drake AI
 * Added the next stage in the main quest, approaching the court mage's tower
 * Added three win scenes to the wildcat encounters. Much more to come
+* Added some dream sequences, triggered when you sleep
 
 --------------------------------------------
              PREVIOUS VERSIONS
